# ProxyV

./: README.md  demo.py  pyproject.toml
docs/: index.html
docs/static/css/: index.css
llava/: conversation.py  mm_utils.py
llava/model/: __init__.py  builder.py  llava_arch.py  vision_mlp.py
llava/model/language_model/: llava_llama.py  llava_phi3.py  llava_qwen.py
llava/train/: llava_trainer.py  train.py
scripts/finetune/: finetune_vicuna7b_baseline.sh  finetune_vicuna7b_proxyv.sh
scripts/pretrain/: pretrain_llama8b_baseline.sh  pretrain_llama8b_proxyv.sh  pretrain_phi3b_baseline.sh  pretrain_phi3b_proxyv.sh  pretrain_qwen7b_baseline.sh  pretrain_qwen7b_proxyv.sh  pretrain_vicuna13b_baselin.sh  pretrain_vicuna13b_proxyv.sh  pretrain_vicuna7b_baseline.sh  pretrain_vicuna7b_proxyv.sh
